vendor/DOtherSide/lib/include/DOtherSide/DOtherSide.h


DOS_API void DOS_CALL dos_qguiapplication_create();
DOS_API void DOS_CALL dos_qguiapplication_exec(void);
DOS_API void DOS_CALL dos_qguiapplication_quit(void);
DOS_API void DOS_CALL dos_qguiapplication_delete(void);
DOS_API void DOS_CALL dos_qguiapplication_exec(void);
DOS_API void DOS_CALL dos_signal(DosQObject *vptr, const char *signal, const char *slot);
DOS_API DosQNetworkConfigurationManager *DOS_CALL dos_qncm_create();
DOS_API void DOS_CALL dos_qncm_delete(DosQNetworkConfigurationManager *vptr);
DOS_API void DOS_CALL dos_qguiapplication_quit(void);
DOS_API void DOS_CALL dos_qguiapplication_delete(void);
DOS_API DosQQmlApplicationEngine *DOS_CALL dos_qqmlapplicationengine_create(void);
DOS_API DosQQmlNetworkAccessManagerFactory *DOS_CALL dos_qqmlnetworkaccessmanagerfactory_create(const char* tmpPath);
DOS_API void DOS_CALL dos_qqmlapplicationengine_load(DosQQmlApplicationEngine *vptr, const char *filename);
DOS_API void DOS_CALL dos_qqmlapplicationengine_setNetworkAccessManagerFactory(DosQQmlApplicationEngine *vptr, DosQQmlNetworkAccessManagerFactory *factory);
DOS_API void DOS_CALL dos_qqmlapplicationengine_load_url(DosQQmlApplicationEngine *vptr, DosQUrl *url);
DOS_API void DOS_CALL dos_qqmlapplicationengine_load_data(DosQQmlApplicationEngine *vptr, const char *data);
DOS_API void DOS_CALL dos_qqmlapplicationengine_add_import_path(DosQQmlApplicationEngine *vptr, const char *path);
DOS_API DosQQmlContext *DOS_CALL dos_qqmlapplicationengine_context(DosQQmlApplicationEngine *vptr);
DOS_API void DOS_CALL dos_qqmlapplicationengine_delete(DosQQmlApplicationEngine *vptr);
DOS_API void DOS_CALL dos_qqmlcontext_setcontextproperty(DosQQmlContext *vptr, const char *name, DosQVariant *value);
DOS_API void DOS_CALL dos_chararray_delete(char *ptr);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create(void);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_int(int value);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_bool(bool value);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_string(const char *value);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_qobject(DosQObject *value);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_qvariant(const DosQVariant *value);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_float(float value);
DOS_API DosQVariant *DOS_CALL dos_qvariant_create_double(double value);
DOS_API void DOS_CALL dos_qvariant_setInt(DosQVariant *vptr, int value);
DOS_API void DOS_CALL dos_qvariant_setBool(DosQVariant *vptr, bool value);
DOS_API void DOS_CALL dos_qvariant_setFloat(DosQVariant *vptr, float value);
DOS_API void DOS_CALL dos_qvariant_setDouble(DosQVariant *vptr, double value);
DOS_API void DOS_CALL dos_qvariant_setString(DosQVariant *vptr, const char *value);
DOS_API void DOS_CALL dos_qvariant_setQObject(DosQVariant *vptr, DosQObject *value);
DOS_API bool DOS_CALL dos_qvariant_isnull(const DosQVariant *vptr);
DOS_API void DOS_CALL dos_qvariant_delete(DosQVariant *vptr);
DOS_API void DOS_CALL dos_qvariant_assign(DosQVariant *vptr, const DosQVariant *other);
DOS_API int DOS_CALL dos_qvariant_toInt(const DosQVariant *vptr);
DOS_API bool DOS_CALL dos_qvariant_toBool(const DosQVariant *vptr);
DOS_API char *DOS_CALL dos_qvariant_toString(const DosQVariant *vptr);
DOS_API float DOS_CALL dos_qvariant_toFloat (const DosQVariant *vptr);
DOS_API double DOS_CALL dos_qvariant_toDouble(const DosQVariant *vptr);
DOS_API DosQMetaObject *DOS_CALL dos_qmetaobject_create(DosQMetaObject *superClassMetaObject,
                                                        const char *className,
                                                        const SignalDefinitions *signalDefinitions,
                                                        const SlotDefinitions *slotDefinitions,
                                                        const PropertyDefinitions *propertyDefinitions);
DOS_API void DOS_CALL dos_qmetaobject_delete(DosQMetaObject *vptr);
DOS_API DosQMetaObject *DOS_CALL dos_qabstractitemmodel_qmetaobject(void);
DOS_API DosQMetaObject *DOS_CALL dos_qobject_qmetaobject(void);
DOS_API DosQObject *DOS_CALL dos_qobject_create(void *dObjectPointer,
                                                DosQMetaObject *metaObject,
                                                DObjectCallback dObjectCallback);
DOS_API void DOS_CALL dos_qobject_signal_emit(DosQObject *vptr,
                                              const char *name,
                                              int parametersCount,
                                              void **parameters);
DOS_API bool DOS_CALL dos_qobject_signal_connect(DosQObject *senderVPtr,
                                                 const char *signal,
                                                 DosQObject *receiverVPtr,
                                                 const char *method,
                                                 int type);
DOS_API char *DOS_CALL dos_qobject_objectName(const DosQObject *vptr);
DOS_API void DOS_CALL dos_qobject_setObjectName(DosQObject *vptr, const char *name);
DOS_API void DOS_CALL dos_qobject_delete(DosQObject *vptr);
DOS_API DosQUrl *DOS_CALL dos_qurl_create(const char *url, int parsingMode);
DOS_API void DOS_CALL dos_qurl_delete(DosQUrl *vptr);
DOS_API char *DOS_CALL dos_qurl_to_string(const DosQUrl *vptr);